--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "esbuild": "^0.13.11",
     "fs-extra": "^10.0.0",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.3.1",
     "polka": "^0.5.2",
     "postcss": "^8.3.11",
     "preact-render-to-string": "^5.1.19",
