--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
     "tailwindcss": "^2.2.19",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.11.0",
-    "typescript": "^4.4.4"
-  },
-  "dependencies": {
+    "typescript": "^4.4.4",
     "@types/html-minifier-terser": "^6.0.0",
     "@types/markdown-it": "^12.2.3",
     "html-minifier-terser": "^6.0.2",
-    "markdown-it": "^12.2.0",
+    "markdown-it": "^12.2.0"
+  },
+  "dependencies": {
     "preact": "^10.5.15"
   }
 }
