--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
   },
   "homepage": "https://github.com/hanayashiki/blog#readme",
   "devDependencies": {
-    "@deanc/esbuild-plugin-postcss": "^1.0.2",
     "@types/compression": "^1.7.2",
     "@types/copyfiles": "^2.4.1",
     "@types/fs-extra": "^9.0.13",
+    "@types/html-minifier-terser": "^6.0.0",
+    "@types/markdown-it": "^12.2.3",
     "@types/node": "^16.11.6",
     "@types/polka": "^0.5.3",
     "@types/tailwindcss": "2.2.2",
@@ -36,6 +37,8 @@
     "fs-extra": "^10.0.0",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.3.1",
+    "html-minifier-terser": "^6.0.2",
+    "markdown-it": "^12.2.0",
     "polka": "^0.5.2",
     "postcss": "^8.3.11",
     "preact-render-to-string": "^5.1.19",
@@ -43,11 +46,7 @@
     "tailwindcss": "^2.2.19",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.11.0",
-    "typescript": "^4.4.4",
-    "@types/html-minifier-terser": "^6.0.0",
-    "@types/markdown-it": "^12.2.3",
-    "html-minifier-terser": "^6.0.2",
-    "markdown-it": "^12.2.0"
+    "typescript": "^4.4.4"
   },
   "dependencies": {
     "preact": "^10.5.15"
