--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@types/markdown-it": "^12.2.3",
     "@types/node": "^16.11.6",
     "@types/polka": "^0.5.3",
-    "@types/tailwindcss": "2.2.2",
     "autoprefixer": "^10.4.0",
     "chalk": "^4.1.2",
     "compression": "^1.7.4",
@@ -41,12 +40,13 @@
     "markdown-it": "^12.2.0",
     "polka": "^0.5.2",
     "postcss": "^8.3.11",
+    "postcss-windicss": "^1.0.0",
     "preact-render-to-string": "^5.1.19",
     "sirv": "^1.0.18",
-    "tailwindcss": "^2.2.19",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.11.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "windicss": "^3.2.1"
   },
   "dependencies": {
     "preact": "^10.5.15"
