feat: add years

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
   "rewrites": [
     { "source": "/blogs/:match*", "destination": "/blogs/:match*.html" },
-    { "source": "/me", "destination": "/me.html" },
-    { "source": "/privacy", "destination": "/privacy.html" }
+    { "source": "/:match*", "destination": "/:match*.html" }
   ],
   "headers": [
     {
