chore: upgrade dependencies (via taze)

--- a/package.json
+++ b/package.json
@@ -21,37 +21,37 @@
   },
   "homepage": "https://github.com/hanayashiki/blog#readme",
   "devDependencies": {
-    "@types/compression": "^1.7.2",
-    "@types/copyfiles": "^2.4.1",
+    "@types/compression": "^1.7.5",
+    "@types/copyfiles": "^2.4.4",
     "@types/fs-extra": "^9.0.13",
     "@types/html-minifier-terser": "^6.1.0",
     "@types/markdown-it": "^12.2.3",
-    "@types/node": "^16.18.24",
-    "@types/polka": "^0.5.4",
-    "autoprefixer": "^10.4.14",
+    "@types/node": "^16.18.126",
+    "@types/polka": "^0.5.7",
+    "autoprefixer": "^10.4.21",
     "chalk": "^4.1.2",
-    "compression": "^1.7.4",
+    "compression": "^1.8.0",
     "copyfiles": "^2.4.1",
     "esbuild": "^0.13.15",
     "fs-extra": "^10.1.0",
     "gray-matter": "^4.0.3",
-    "highlight.js": "^11.7.0",
+    "highlight.js": "^11.11.1",
     "html-minifier-terser": "^6.1.0",
     "markdown-it": "^12.3.2",
     "polka": "^0.5.2",
-    "postcss": "^8.4.23",
+    "postcss": "^8.5.3",
     "postcss-windicss": "^1.0.0",
     "preact-render-to-string": "^5.2.6",
     "sirv": "^1.0.19",
-    "sitemap": "^7.1.1",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^3.14.2",
-    "typescript": "^5.0.4",
+    "sitemap": "^7.1.2",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^3.15.0",
+    "typescript": "^5.8.3",
     "windicss": "^3.5.6"
   },
   "dependencies": {
     "copy-to-clipboard": "^3.3.3",
-    "preact": "^10.13.2"
+    "preact": "^10.26.6"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@1.22.22"
 }
